Kico: avoid links getting broken on new lines

--- a/static/fonts.css
+++ b/static/fonts.css
@@ -21,6 +21,7 @@ a {
   text-decoration: none;
   cursor: pointer;
   color:var(--main-link-color);
+  white-space:nowrap;
 }
 a:hover{
   color:var(--main-highlight-color);
